...
    <string name="nrDialog_title">Save new recording?</string>
    <string name="nrDialog_recording_name_hint">Name</string>
    <string name="nrDialog_add_subject">Add new subject…</string>
    <string name="nrDialog_positive_button_text">Save</string>

    <!-- Text for discard Recording? Dialog -->
    <string name="drDialog_title">Discard recording?</string>
    <string name="drDialog_message">The recording will be lost forever.</string>

    <!-- Text for CreateNewSubjectDialog -->
    <string name="cnsDialog_title">Create new subject</string>
    <string name="cnsDialog_subject_name_hint">Name of new subject</string>
    <string name="cnsDialog_save_button_text">Save</string>

    <!-- Text for subjectsFragment -->
    <string name="subjectsFragment_empty_state_text">No subjects yet, try adding one…</string>

...
