...
            android:inputType="text"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.audiolearning.app.ui.component.DoubleSelectSpinner
        android:id="@+id/sp_select_subject"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_audio_name" />
...
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_select_subject">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_discard_recording"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:text="@string/discard"
...
