<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_recorder">

    <data>
        <variable
            name="viewModel"
            type="com.audiolearning.app.ui.fragment.recorder.RecorderFragmentViewModel" />
    </data>
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_record_and_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{ () -> viewModel.recordingAndTimerHandler.onRecordOrStop() }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
