<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_about_us"
        android:icon="@drawable/ic_logo"
        android:title="@string/title_academy" />

    <item
        android:id="@+id/navigation_recorder"
        android:icon="@drawable/ic_mic"
        android:title="@string/title_recorder" />

    <item
        android:id="@+id/navigation_subjects"
        android:icon="@drawable/ic_subjects"
        android:title="@string/title_subjects" />

</menu>
